Add Page to getAllBlogPost endpoint. Adjusted BlogPost tests to test Page functionality.